# MMOZ

01Karmeliuk/: main.cpp
02/: CMakeLists.txt  main.cpp
02Karmeliuk/: main.cpp
03Karmeliuk/: main.cpp
04Karmeliuk/: main.cpp
05Karmeliuk/: CMakeLists.txt  main.cpp
06Karmeliuk/: CMakeLists.txt  main.cpp
07Karmeliuk/: CMakeLists.txt  main.cpp
08Karmeliuk/: CMakeLists.txt  main.cpp
09Karmeliuk/: main.cpp
10_Karmeliuk/: CMakeLists.txt  main.cpp
kanadi_tomasi/: CMakeLists.txt  main.cpp
